--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>教學問答計時工具</title>
+<title>脈問堂</title>
 <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
 <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -891,7 +891,7 @@ body::before {
 <header class="section-header fade-in-scale">
 <h1 class="section-title">
 <i class="fas fa-brush text-clay-brown mr-3 icon-shadow"></i>
-教學問答計時工具
+脈問堂
 </h1>
 <p class="section-subtitle">簡潔高效的課堂問答計時工具</p>
 </header>
