--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ body::before {
   border: 1px solid rgba(141, 123, 104, 0.3);
   border-radius: var(--border-radius);
   padding: 13px 26px;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Noto Serif TC', serif
   font-weight: 600;
   letter-spacing: 0.5px;
   transition: var(--transition);
@@ -156,7 +156,7 @@ body::before {
   color: var(--text-primary);
   border-radius: 14px;
   padding: 14px 18px;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Noto Serif TC', serif;
   font-weight: 500;
   transition: var(--transition);
   box-shadow: 0 2px 4px rgba(0,0,0,0.03);
@@ -294,7 +294,7 @@ textarea:not(.no-modal-editor):hover, input[type="text"]:not(.no-modal-editor):h
 }
 
 .countdown-display {
-  font-family: 'Inter', sans-serif;
+  font-family: 'Noto Serif TC', serif;
   font-size: 4.2rem;
   font-weight: 700;
   color: var(--charcoal);
@@ -353,7 +353,7 @@ textarea:not(.no-modal-editor):hover, input[type="text"]:not(.no-modal-editor):h
   transition: var(--transition);
   position: relative;
   overflow: hidden;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Noto Serif TC', serif;
   font-weight: 500;
   font-size: 1.25rem;
   line-height: 1.5;
@@ -389,13 +389,13 @@ textarea:not(.no-modal-editor):hover, input[type="text"]:not(.no-modal-editor):h
 
 .text-wabi {
   color: var(--clay-brown);
-  font-family: 'Inter', sans-serif;
+  font-family: 'Noto Serif TC', serif;
   font-weight: 600;
 }
 
 .text-wabi-secondary {
   color: var(--text-secondary);
-  font-family: 'Inter', sans-serif;
+  font-family: 'Noto Serif TC', serif;
   font-weight: 400;
 }
 
@@ -435,7 +435,7 @@ textarea:not(.no-modal-editor):hover, input[type="text"]:not(.no-modal-editor):h
   background: transparent;
   border: none;
   text-align: center;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Noto Serif TC', serif;
   font-size: 1.3rem;
   font-weight: 600;
   color: var(--charcoal);
@@ -470,12 +470,12 @@ textarea:not(.no-modal-editor):hover, input[type="text"]:not(.no-modal-editor):h
   color: var(--stone-gray);
   font-weight: 600;
   font-size: 1.2rem;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Noto Serif TC', serif;
   letter-spacing: 0.5px;
 }
 
 .room-code {
-  font-family: 'Inter', sans-serif;
+  font-family: 'Noto Serif TC', serif;
   font-size: 1.65rem;
   color: var(--clay-brown);
   letter-spacing: 2px;
@@ -505,7 +505,7 @@ textarea:not(.no-modal-editor):hover, input[type="text"]:not(.no-modal-editor):h
   color: var(--charcoal);
   border-radius: 12px 0 0 0;
   border: 1px solid rgba(141, 123, 104, 0.25);
-  font-family: 'Inter', sans-serif;
+  font-family: 'Noto Serif TC', serif;
   font-size: 0.8rem;
   z-index: 100;
   box-shadow: -2px -2px 8px rgba(0,0,0,0.05);
@@ -533,7 +533,7 @@ textarea:not(.no-modal-editor):hover, input[type="text"]:not(.no-modal-editor):h
 }
 
 .host-countdown {
-  font-family: 'Inter', sans-serif;
+  font-family: 'Noto Serif TC', serif;
   font-size: 3.6rem;
   font-weight: 700;
   color: var(--charcoal);
@@ -570,7 +570,7 @@ textarea:not(.no-modal-editor):hover, input[type="text"]:not(.no-modal-editor):h
 }
 
 .question-title {
-  font-family: 'Inter', sans-serif;
+  font-family: 'Noto Serif TC', serif;
   font-size: 1.45rem;
   font-weight: 600;
   color: var(--text-primary);
@@ -578,7 +578,7 @@ textarea:not(.no-modal-editor):hover, input[type="text"]:not(.no-modal-editor):h
 }
 
 .time-title {
-  font-family: 'Inter', sans-serif;
+  font-family: 'Noto Serif TC', serif;
   font-size: 1.15rem;
   font-weight: 500;
   color: var(--text-secondary);
@@ -667,7 +667,7 @@ textarea:not(.no-modal-editor):hover, input[type="text"]:not(.no-modal-editor):h
 }
 
 .section-title {
-  font-family: 'Inter', sans-serif;
+  font-family: 'Noto Serif TC', serif;
   font-size: 2.2rem;
   font-weight: 700;
   color: var(--charcoal);
@@ -676,7 +676,7 @@ textarea:not(.no-modal-editor):hover, input[type="text"]:not(.no-modal-editor):h
 
 .section-subtitle {
   color: var(--text-secondary);
-  font-family: 'Inter', sans-serif;
+  font-family: 'Noto Serif TC', serif;
   font-size: 1.1rem;
 }
 
@@ -717,14 +717,14 @@ textarea:not(.no-modal-editor):hover, input[type="text"]:not(.no-modal-editor):h
 }
 
 .role-title {
-  font-family: 'Inter', sans-serif;
+  font-family: ''Noto Serif TC', serif;
   font-size: 1.4rem;
   font-weight: 600;
   margin-bottom: 0.5rem;
 }
 
 .role-desc {
-  font-family: 'Inter', sans-serif;
+  font-family: 'Noto Serif TC', serif;
   color: var(--text-secondary);
 }
 
@@ -1157,9 +1157,11 @@ textarea:not(.no-modal-editor):hover, input[type="text"]:not(.no-modal-editor):h
   border-radius: 8px;
   border: 1px solid rgba(141, 123, 104, 0.3);
   background: var(--earth-beige);
-  font-family: 'Inter', sans-serif;
+  font-family: 'Noto Serif TC', serif;
   color: var(--charcoal);
 }
+
+
 
 </style>
 </head>
