--- a/index.html
+++ b/index.html
@@ -1075,7 +1075,7 @@ textarea:not(.no-modal-editor):hover, input[type="text"]:not(.no-modal-editor):h
 /* 1. 工具列容器基礎設定 */
 #drawingTools {
   position: fixed;
-  top: 85px; /* 稍微往下挪一點，避開瀏覽器網址列干擾 */
+  top: 85px; 
   left: 50%;
   transform: translateX(-50%);
   z-index: 60;
@@ -1088,16 +1088,31 @@ textarea:not(.no-modal-editor):hover, input[type="text"]:not(.no-modal-editor):h
   display: flex !important;
   flex-direction: row;
   align-items: center;
-  gap: 16px; /* 預設間距 */
+  justify-content: flex-start; /* 確保內容從左開始排列 */
+  gap: 12px; 
   
-  /* 響應式關鍵：防止超出螢幕 */
-  max-width: 95vw; /* 最大寬度為視窗的 95% */
-  box-sizing: border-box;
-  transition: all 0.3s cubic-bezier(0.23, 1, 0.32, 1);
+  /* 響應式關鍵設定 */
+  max-width: 92vw; /* 留一點邊距，不貼死螢幕邊緣 */
+  width: max-content; /* 寬度隨內容自動調整 */
+  
+  /* 允許橫向滾動，防止內容被切掉 */
+  overflow-x: auto; 
+  -webkit-overflow-scrolling: touch; /* iOS 滑動優化 */
+  
+  /* 隱藏滾動條但保留功能 */
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE/Edge */
+  
+  transition: top 0.3s cubic-bezier(0.23, 1, 0.32, 1);
 }
 
 #drawingTools.hidden {
   display: none !important;
+}
+
+/* 隱藏 Chrome/Safari/Webkit 的滾動條 */
+#drawingTools::-webkit-scrollbar {
+  display: none;
 }
 
 /* 2. 按鈕基礎設定 */
@@ -1116,8 +1131,10 @@ textarea:not(.no-modal-editor):hover, input[type="text"]:not(.no-modal-editor):h
   box-shadow: 0 2px 5px rgba(0,0,0,0.05);
   transition: all 0.2s ease;
   position: relative;
-  flex-shrink: 0; /* 防止按鈕被壓縮變形 */
-  -webkit-tap-highlight-color: transparent; /* 移除手機點擊藍框 */
+  
+  /* 關鍵：防止按鈕在空間不足時被壓縮變形 */
+  flex-shrink: 0; 
+  -webkit-tap-highlight-color: transparent;
 }
 
 .tool-btn:hover {
@@ -1135,11 +1152,6 @@ textarea:not(.no-modal-editor):hover, input[type="text"]:not(.no-modal-editor):h
   transform: scale(1.1);
 }
 
-#colorPreviewBtn {
-  overflow: hidden;
-  border: 2px solid rgba(0,0,0,0.1);
-}
-
 /* 3. 滑桿容器：預設樣式 (電腦版) */
 .slider-popup {
   position: absolute;
@@ -1149,12 +1161,12 @@ textarea:not(.no-modal-editor):hover, input[type="text"]:not(.no-modal-editor):h
   background: var(--paper);
   padding: 15px;
   border-radius: 12px;
-  box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+  box-shadow: 0 5px 15px rgba(0,0,0,0.2);
   border: 1px solid rgba(138, 118, 99, 0.2);
   width: 200px;
   display: flex;
   align-items: center;
-  justify-content: center; /* 讓滑桿置中 */
+  justify-content: center;
   z-index: 70;
 }
 
@@ -1186,39 +1198,34 @@ input[type=range]::-webkit-slider-thumb {
 /* 5. 手機版響應式調整 (螢幕寬度小於 768px 時觸發) */
 @media (max-width: 768px) {
   #drawingTools {
-    top: 70px; /* 手機上再稍微高一點，節省空間 */
+    top: 70px; /* 手機上稍微往上，留出更多繪圖空間 */
     padding: 8px 12px;
-    gap: 8px; /* 縮小按鈕間距 */
-    
-    /* 如果螢幕真的很小，允許橫向捲動，保持佈局不崩壞 */
-    overflow-x: auto; 
-    /* 隱藏捲動條但保留功能 */
-    scrollbar-width: none; 
-    -ms-overflow-style: none;
-  }
-  
-  #drawingTools::-webkit-scrollbar {
-    display: none;
+    gap: 10px; /* 稍微縮小間距 */
+    border-radius: 30px;
   }
 
   .tool-btn {
-    width: 38px; /* 縮小按鈕尺寸 */
-    height: 38px;
-    font-size: 1rem; /* 縮小圖示 */
+    width: 40px; /* 縮小按鈕尺寸適應手指 */
+    height: 40px;
+    font-size: 1rem;
   }
 
-  /* 手機版滑桿優化：改為固定在螢幕中央彈出 */
+  /* 手機版滑桿優化：改為固定在螢幕中央彈出 (Modal模式) */
+  /* 這樣即使工具列在滑動，滑桿也能穩定的顯示在畫面中間 */
   .slider-popup {
-    position: fixed; /* 改為固定定位 */
+    position: fixed; 
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 240px; /* 稍微寬一點方便手指拖動 */
-    padding: 25px 20px;
-    box-shadow: 0 0 0 1000px rgba(0,0,0,0.3); /* 增加背景遮罩效果，讓用家專注調整 */
+    width: 260px;
+    padding: 30px 20px;
+    background: #fff;
+    /* 增加深色背景遮罩效果，讓用戶專注調整 */
+    box-shadow: 0 10px 30px rgba(0,0,0,0.2), 0 0 0 100vmax rgba(0,0,0,0.3);
+    border: 1px solid var(--clay-brown);
   }
   
-  /* 增大滑桿觸控區域 */
+  /* 增大滑桿觸控點，方便手指拖動 */
   input[type=range]::-webkit-slider-thumb {
     width: 28px; 
     height: 28px;
